# server_met

./: Dockerfile  goGribV2.sh  pyproject.toml  remove_GRIBS_antigos.sh  varPythonGrib  variable_inside_list.txt
METARpy/: GoMETAR.py  METARpy.py  METARpy_traduzido.py  PythonMETAR-1.0.0.1.tar
METARpy/PythonMETAR-1.0.0.1/PythonMETAR.egg-info/: SOURCES.txt
bash/: listas_var_bash.txt  tst.txt
classes_MET/: .processamento_dados_MET.py.swp  controla_env.py  executa_reqs_param.py  gera_mapas_vento_MAN_MET.py  gera_matriz_MET.py  leitura_dados_grib_MET.py  parse_param_MET.py  poligono_regiao_MET.py  regioes_predefinidas_MET.py
docs/: documentation.html  documentation.md
environment/: path.conf
scripts/: clean_old_gribs.sh
server_MET/: __init__.py  grib_reader.py  map_generator.py  models.py  wind_processor.py
servidor_MET/: docker-compose.yml  pytest.ini  requirements.txt  varMET  variables.txt
servidor_MET/METARpy/: automatizaMetar.sh
servidor_MET/bash/: automatiza_MET.sh  automatiza_vento_MET.sh  automatizacao_controle_MET.sh  reqs_MAN_MET.sh  tstbash.sh
servidor_MET/classes_MET/: .gera_mapas_vento_MAN_MET.py.swp  gera_mapas_MAN_MET.py  gera_mapas_MET.py  gera_mapas_vento_MET.py  gera_matriz_MAN_MET.py  gera_matriz_vento_MAN_MET.py  gera_matriz_vento_MET.py  ponto_regiao_MET.py  processamento_dados_MET.py
servidor_MET/scripts/: download_gribs.sh  run.sh
servidor_MET/server_MET/: config.py  data_processor.py  grib_downloader.py  matrix_generator.py  metar_client.py  region.py  server.py
servidor_MET/tests/: test_core.py
tests/: test_server.py
(+4 files in other folders)
